fixed safari mobile fixed positioning scroll issue.-webkit-overflow-scrolling: touch;

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -15,7 +15,7 @@
 
 
 /* Base structure */
-html, body {height:100%; margin:0;}
+html, body {height:100%; margin:0; -webkit-overflow-scrolling: touch;}
 body {color:#fff; text-align:center; font-family:"ProximaNova-Light",sans-serif; font-weight:300;background-color:rgba(0,102,255,1);}
 
 
@@ -202,7 +202,7 @@ div.container.col-xs-11.col-centered {}
   .container {width:auto;}
   .masthead-brand {float:left;}
   .masthead-nav {float:right;}
-  .masthead {position:fixed; top:0;}
+  .masthead {position:fixed; top:0; -webkit-overflow-scrolling: touch;}
   .navbar-inverse .navbar-brand {float:left;}
   .navbar-text {float:left; margin:18px 35px 15px 0;}
   .navbar-inverse .navbar-toggle, .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:active, .navbar-inverse .navbar-toggle:focus {float:left; display:block; margin:0; padding:9px 11px; border-color:transparent; margin:18px 10px; background:transparent;}
